src/styles/layout/_main.scss
.container {
	background-image: url('/src/images/background.jpg');
	background-repeat: no-repeat;
	background-position: top center;
	background-attachment: fixed;
	background-color: $tomato-color;
	background-blend-mode: multiply;
	background-size: cover;
	overflow-x: hidden;
	height: 100vh;

	@include breakpoint(tablet) {
		background-attachment: scroll;
		overflow-y: hidden;
	}
}

.main-container {
	//max-width: rem-calc(1200);
	//margin: auto;
	position: relative;
}

